src/objects/AF_Category_Brand__c.object
<CustomObject>
    <description>Used to store Categories and associated brands related to Agency Fee Application.</description>
    <fields>
        <fullName>AF_Brand_Logo__c</fullName>
        <description>AgencyFee#GLOBAL#To Store Brand Logo Image
Created as per requirement A5.1 inRTM</description>
        <label>Brand Logo</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AF_Category_Brands__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>AgencyFee#GLOBAL#To associate brands to corresponding Categories</description>
        <label>Category</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Category</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AF_Category_Brand__c</referenceTo>
        <relationshipLabel>Category-Brands</relationshipLabel>
        <relationshipName>Category_Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AF_Category__c</fullName>
        <description>Not Used</description>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Beverages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deodorants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HHC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ice Cream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laundry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oral Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savoury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCC &amp; Dressing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skin Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skin Cleansing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AF_Description__c</fullName>
        <description>AgencyFee#GLOBAL#To store the description about category..
Created as per the requirement A4.1 in RTM</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AF_Pilot_Model__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Not Used</description>
        <label>Pilot Model</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AF_Super_category__c</fullName>
        <description>AgencyFee#GLOBAL#To Store Super Catgeories</description>
        <label>Super category</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skin Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Hygiene</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drinks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foods</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AF_Unique_Name__c</fullName>
        <description>AgencyFee#GLOBAL#To Store unique names of Categories and brands</description>
        <label>Unique Name</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <description>Stores the Brand</description>
        <label>Brand</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Category-Brands</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>AF_Category_Brands__c</columns>
        <columns>AF_Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Category-Brands</pluralLabel>
    <recordTypes>
        <fullName>AF_Brand</fullName>
        <active>true</active>
        <description>Contains the Fields related to Brands</description>
        <label>Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>AF_Category</fullName>
        <active>true</active>
        <description>Contains the Fields related to Category</description>
        <label>Category</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>